fix hyphen on mobile

--- a/static/src/stylesheets/module/crosswords/_anagram-helper.scss
+++ b/static/src/stylesheets/module/crosswords/_anagram-helper.scss
@@ -101,7 +101,7 @@
     font-size: 24px;
 
     @include mq($until: mobileLandscape) {
-        padding-left: 15px;
+        padding-left: 19px;
     }
 }
 
